<resources>
    <string name="app_name">FirstApp</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="log_in">Log In</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="dashboard">Dashboard</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="about_app">About App</string>
    <string name="navigation_bar">Navigation Bar</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
</resources>
