<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/LogInToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:layout_scrollFlags="scroll|enterAlways"
            />
    </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <ImageView
        android:id="@+id/imgAvengersLogo"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:src="@drawable/thapar_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        />
    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/mobile_number"
        android:layout_below="@+id/imgAvengersLogo"
        android:layout_marginTop="30dp"
        android:backgroundTint="#000000"
        android:inputType="phone"
        android:padding="6dp"
        android:maxLength="10"
        android:maxLines="1"
        />
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/password"
        android:layout_below="@+id/etMobileNumber"
        android:layout_marginTop="20dp"
        android:backgroundTint="#000000"
        android:padding="6dp"
        android:inputType="textPassword"
        android:maxLines="1"
        />
    <TextView
        android:id="@+id/txtForgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:layout_below="@id/btnLogIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        />
    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/etPassword"
        android:layout_marginTop="20dp"
        android:text="@string/log_in"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/txtRegisterYourself"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_yourself"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        />

</RelativeLayout>